[package]
name = "sshs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.4", features = ["derive"] }
home = "0.5.9"
thiserror = "1.0.58"
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
log = { version = "0.4.21", features = ["max_level_debug", "release_max_level_error"] }
env_logger = "0.11.3"
